--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
       <h1>{ Sadar Romain }</h1>
-      <p>I'm a <span class="typed" data-typed-items="Developer in the making"></span></p>
+      <p>I'm a <span class="typed" data-typed-items="Developer"></span></p>
     </div>
   </section><!-- End Hero -->
 
@@ -195,7 +195,7 @@
 
         </div>
 
-        <h3>Database </h3>
+        <h3>Database </h3> 
 
         <div class="row skills-content">
 
@@ -222,9 +222,10 @@
               </div>
             </div>
 
+            
+
           </div>
 
-          
 
         </div>
 
@@ -283,37 +284,48 @@
             <div class="resume-item">
               <h4>Two year technical degree "BTS SIO"</h4>
               <h5>2021 - Now</h5>
-              <p><em>Edouard Gand HS (Amiens, France)</em></p>
+              <p><em>Lycée Edouard Gand (Amiens, France)</em></p>
             </div>
             <div class="resume-item">
-              <h4>Bachelor of Fine Arts &amp; Graphic Design</h4>
-              <h5>2010 - 2014</h5>
-              <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-              <p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis Eius vel ratione eius unde vitae rerum voluptates asperiores voluptatem Earum molestiae consequatur neque etlon sader mart dila</p>
+              <h4>HS Diploma </h4>
+              <h5>2018 - 2021</h5>
+              <p><em>Lycée Jean Rostand (Chantilly, France)</em></p>
             </div>
           </div>
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
-              <h4>Senior graphic design specialist</h4>
-              <h5>2019 - Present</h5>
-              <p><em>Experion, New York, NY </em></p>
+              <h4>Back End Developer</h4>
+              <h5>2022</h5>
+              <p><em>Amiens, France</em></p>
               <ul>
-                <li>Lead in the design, development, and implementation of the graphic, layout, and production communication materials</li>
-                <li>Delegate tasks to the 7 members of the design team and provide counsel on all aspects of the project. </li>
-                <li>Supervise the assessment of all graphic materials in order to ensure quality and accuracy of the design</li>
-                <li>Oversee the efficient use of production project budgets ranging from $2,000 - $25,000</li>
+                <li>
+                  6 weeks internship during which we were in a 3 man team 
+                </li>
+                <li>
+                  Build a dynamic and responsive Website that lists the different places in 
+                  Berck-Sur-Mer (France) and sort them according to their accessibility to
+                  differents handicaps.
+                </li>
+                <li>
+                  Responsible for database and data extraction
+                </li>
+                <li>
+                  Used OpenStreetMap and Leaflet to display markers from the coordinates in the DB.
+                </li>
               </ul>
             </div>
             <div class="resume-item">
-              <h4>Graphic design specialist</h4>
-              <h5>2017 - 2018</h5>
-              <p><em>Stepping Stone Advertising, New York, NY</em></p>
+              <h4>Internship as a developer at the SESAN</h4>
+              <h5>2022</h5>
+              <p><em>Paris, France</em></p>
               <ul>
-                <li>Developed numerous marketing programs (logos, brochures,infographics, presentations, and advertisements).</li>
-                <li>Managed up to 5 projects or tasks at a given time while under pressure</li>
-                <li>Recommended and consulted with clients on the most appropriate graphic design</li>
-                <li>Created 4+ design presentations and proposals a month for clients and account managers</li>
+                <li>
+                  Data scraping incidents tickets from ServiceNow using R and the Selenium tool
+                </li>
+                <li>
+                  Automaticaly edit excel sheets and fill them with the data from the tickets and do calcul for the SLA.
+                </li>
               </ul>
             </div>
           </div>
