--- a/bigdata.html
+++ b/bigdata.html
@@ -45,12 +45,12 @@
 						<p>
 							Le big data, ou mégadonnées en français, est un concept qui a révolutionné le monde des affaires ces dernières années. En effet, Avec le développement des nouvelles technologies, d'internet et des réseaux sociaux ces vingt dernières années, la production de données numériques a été de plus en plus nombreuse : textes, photos, vidéos, etc... le monde devient le théâtre d'un accroissement de données sans précédent. En permettant de collecter, stocker et analyser d'immenses volumes de données issues de sources diverses et variées, le "big data" permet aux entreprises d'améliorer leur prise de décision, leur efficacité et leur compétitivité sur le marché.
 						</p>
-						<div class="img"><img src="images/bigdata1.jpg" alt=""></div>
+						<div class="img-veille"><img src="images/bigdata1.jpg" alt=""></div>
 						
 						<p>
 							Même si les définitions diffèrent, elles s'articulent autour de certaines caractéristiques que partagent les données. Il s'agit originellement des « 3V » du Big Data : "Volume", "V"élocité" et "Variété" (cf. Sakr, 2016) ensuite étendue pour couvrir la "Véracité" et la "Valeur" devenant ainsi les « 5V » du Big Data (cf. Tudoran, 2014).
 						</p>
-						<div class="img"><img src="images/bigdata2.webp" alt=""></div>
+						<div class="img-veille"><img src="images/bigdata2.webp" alt=""></div>
 						<h3>Volume</h3>
 						<p>
 							Cette propriété tient pour la grande allure à laquelle les données sont générées, recueillies et ingérées ou analysées [Han et al., 2014][Sakr, 2016]. Cette vitesse impose de nombreux problèmes lorsque ces données doivent être prétraitées (formatage, filtrage, épuration…) ou lorsqu'elles doivent être analysées en temps réel. On réfère à ce phénomène par "Flux de données", un autre aspect tout aussi problématique du Big Data.
@@ -73,7 +73,7 @@
 							Ainsi, construire des systèmes pouvant cohabiter les différents types de données est primordial pour tirer pleine puissance du Big Data.
 						</p>
 
-						<div class="img"><img src="images/bigdata3.png" alt=""></div>
+						<div class="img-veille"><img src="images/bigdata3.png" alt=""></div>
 
 						<h2>Comprendre les tendances du marché grâce au Big Data</h2>
 						<p>
@@ -89,7 +89,7 @@
 						<p>En identifiant les inefficacités ou problèmes potentiels dans la gestion des stocks ou la distribution.</p>
 						<li><b>Amélioration continue des stratégies marketing et commerciales</b></li>
 						
-						<div class="img"><img src="images/bigdata4.jpg" alt=""></div>
+						<div class="img-veille"><img src="images/bigdata4.jpg" alt=""></div>
 
 					</div><a href="index.html" class="btn btn-default smoothScroll wow fadeInUp" data-wow-delay="0.5s">retour</a>
 					<div class="col-md-2"></div>
